<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:background="#ABABAB"
    android:layout_height="fill_parent"
    android:id="@+id/contactViewScrollView"
    >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical" >
		
	    <!-- This xml is filled with linear layouts so that I can later easily
	    implement functionality that hides headings + content that are left blank
	    by the user.
	     -->
	    
	   <RelativeLayout
	        android:id="@+id/contactHeader"
	        android:background="#EDEDED"
	        android:layout_width="fill_parent"
	        android:paddingLeft="10dp"
	        android:layout_height="wrap_content" > 
		    <TextView
		        android:id="@+id/fullName"
		        android:paddingTop="5dp"
		        android:layout_width="wrap_content"
		        android:textSize="18sp"
		        android:layout_height="wrap_content"
		        android:layout_marginRight= "175dip"/>
		    <View
			    android:layout_height="90dp"
			    android:layout_width="1dp"
			    android:layout_toLeftOf="@+id/image"
			    android:background="#000000"/>
		    <ImageView
		        android:id="@+id/image"
		        android:scaleType="centerCrop"
		        android:background="#D6D6D6"
		        android:contentDescription="@string/contact_image_description"
		        android:layout_width="90dp"
		        android:layout_height="90dp"
		        android:layout_alignParentRight="true"
		        />
		   
		</RelativeLayout>
		
	   <View
		    android:layout_width="fill_parent"
		    android:layout_height="1dp"
		    android:background="#000000"/>
	
	    <LinearLayout
	        android:id="@+id/mobile"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="#FFFFFF"
	        android:paddingLeft="10dp"
	        android:orientation="vertical" >
		    <TextView
		        android:id="@+id/mobilePhoneHeading"
		        android:layout_width="wrap_content"
		        android:paddingTop="15dp"
		        android:textColor="#787878"
		        android:layout_height="wrap_content"
		        android:text="@string/mobile_phone" />
	    	<TextView
		        android:id="@+id/mobilePhone"
		        android:paddingTop="2dp"
		        android:layout_width="wrap_content"
		        android:textSize="18sp"
		        android:paddingBottom="10dp"
		        android:layout_height="wrap_content"/>
	    </LinearLayout>
	
	    <LinearLayout
	        android:id="@+id/home"
	        android:layout_width="match_parent"
	        android:background="#FFFFFF"
	        android:paddingLeft="10dp"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	    	<TextView
		        android:id="@+id/homePhoneHeading"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="#787878"
		        android:text="@string/home_phone" />
		    <TextView
		        android:id="@+id/homePhone"
		        android:paddingTop="2dp"
		        android:paddingBottom="10dp"
		        android:layout_width="wrap_content"
		        android:textSize="18sp"
		        android:layout_height="wrap_content"/>
	    </LinearLayout>
	
	    <LinearLayout
	        android:id="@+id/work"
	        android:layout_width="match_parent"
	        android:paddingLeft="10dp"
	        android:background="#FFFFFF"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
		    <TextView
		        android:id="@+id/workPhoneHeading"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="#787878"
		        android:text="@string/work_phone" />
		    <TextView
		        android:id="@+id/workPhone"
		        android:paddingTop="2dp"
		        android:paddingBottom="10dp"
		        android:layout_width="wrap_content"
		        android:textSize="18sp"
		        android:layout_height="wrap_content"/>
	    </LinearLayout>
	
	    <LinearLayout
	        android:id="@+id/email"
	        android:layout_width="match_parent"
	        android:paddingLeft="10dp"
	        android:background="#FFFFFF"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
		    <TextView
		        android:id="@+id/emailHeading"
		        android:layout_width="wrap_content"
		        android:textColor="#787878"
		        android:layout_height="wrap_content"
		        android:text="@string/email" />
		    <TextView
		        android:id="@+id/emailAddress"
		        android:paddingTop="2dp"
		        android:layout_width="wrap_content"
		        android:textSize="18sp"
		        android:paddingBottom="10dp"
		        android:layout_height="wrap_content"/>
	    </LinearLayout>
	
	    <LinearLayout
	        android:id="@+id/address"
	        android:layout_width="match_parent"
	        android:paddingLeft="10dp"
	        android:background="#FFFFFF"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
		    <TextView
		        android:id="@+id/addressHeading"
		        android:layout_width="wrap_content"
		        android:textColor="#787878"
		        android:layout_height="wrap_content"
		        android:text="@string/address" />
		    <TextView
		        android:id="@+id/homeAddress"
		        android:paddingTop="2dp"
		        android:layout_width="wrap_content"
		        android:textSize="18sp"
		        android:paddingBottom="10dp"
		        android:layout_height="wrap_content"/>
	    </LinearLayout>
	
	    <LinearLayout
	        android:id="@+id/dob"
	        android:paddingLeft="10dp"
	        android:layout_width="match_parent"
	        android:background="#FFFFFF"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
		    <TextView
		        android:id="@+id/dateOfBirthHeading"
		        android:layout_width="wrap_content"
		        android:textColor="#787878"
		        android:layout_height="wrap_content"
		        android:text="@string/date_of_birth" />
		    <TextView
		        android:id="@+id/dateOfBirth"
		        android:paddingTop="2dp"
		        android:textSize="18sp"
		        android:layout_width="wrap_content"
		        android:paddingBottom="15dp"
		        android:layout_height="wrap_content"/>
	    </LinearLayout>
	    
	    <View
		    android:layout_width="fill_parent"
		    android:layout_height="1dp"
		    android:background="#000000"/>
	 
	</LinearLayout>
</ScrollView>
