<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/editScroll"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#EDEDED" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:id="@+id/contactHeader"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <View
                android:layout_width="1dp"
                android:layout_height="120dp"
                android:layout_toLeftOf="@+id/image"
                android:background="#000000" />
            
            <TextView
                android:id="@+id/removePhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="20dp"
                android:textColor="#787878"
                android:clickable="true"
                android:text="@string/remove_image"
                android:layout_toLeftOf="@+id/image"
                android:paddingTop="60dp"
                android:onClick="removePhotoClicked"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/image"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_alignParentRight="true"
                android:background="#D6D6D6"
                android:contentDescription="@string/contact_image_description"
                android:onClick="imageClicked"
                android:scaleType="centerCrop" />
        </RelativeLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:id="@+id/firstName"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/rectangle_white"
            android:onClick="firstNameClicked"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/firstNameHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:text="@string/first_name"
                android:textColor="#787878" />

            <TextView
                android:id="@+id/firstName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:text="@string/first_name" />
        </LinearLayout>

        <EditText
            android:id="@+id/editFirstName"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/rectangle_grey"
            android:inputType="textPersonName|textCapWords"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:visibility="gone" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:id="@+id/lastName"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/rectangle_white"
            android:onClick="lastNameClicked"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/lastNameHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:text="@string/last_name"
                android:textColor="#787878" />

            <TextView
                android:id="@+id/lastName2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:text="@string/first_name" />
        </LinearLayout>

        <EditText
            android:id="@+id/editLastName"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/rectangle_grey"
            android:inputType="textPersonName|textCapWords"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:visibility="gone" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:id="@+id/mobile"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/rectangle_white"
            android:onClick="mobilePhoneClicked"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/mobilePhoneHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:text="@string/mobile_phone"
                android:textColor="#787878" />

            <TextView
                android:id="@+id/mobilePhone2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:text="@string/first_name" />
        </LinearLayout>

        <EditText
            android:id="@+id/editMobilePhone"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/rectangle_grey"
            android:inputType="phone"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:visibility="gone" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:id="@+id/home"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/rectangle_white"
            android:onClick="homePhoneClicked"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/homePhoneHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:text="@string/home_phone"
                android:textColor="#787878" />

            <TextView
                android:id="@+id/homePhone2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:text="@string/first_name" />
        </LinearLayout>

        <EditText
            android:id="@+id/editHomePhone"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/rectangle_grey"
            android:inputType="phone"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:visibility="gone" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:id="@+id/work"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/rectangle_white"
            android:onClick="workPhoneClicked"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/workPhoneHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:text="@string/work_phone"
                android:textColor="#787878" />

            <TextView
                android:id="@+id/workPhone2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:text="@string/first_name" />
        </LinearLayout>

        <EditText
            android:id="@+id/editWorkPhone"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/rectangle_grey"
            android:inputType="phone"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:visibility="gone" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:id="@+id/email"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/rectangle_white"
            android:onClick="emailClicked"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/emailHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:text="@string/email"
                android:textColor="#787878" />

            <TextView
                android:id="@+id/email2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:text="@string/first_name" />
        </LinearLayout>

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/rectangle_grey"
            android:inputType="textEmailAddress"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:visibility="gone" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:id="@+id/address"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/rectangle_white"
            android:onClick="addressClicked"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/addressHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:text="@string/address"
                android:textColor="#787878" />

            <TextView
                android:id="@+id/address2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:text="@string/first_name" />
        </LinearLayout>

        <EditText
            android:id="@+id/editAddress"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/rectangle_grey"
            android:inputType="textPostalAddress"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:visibility="gone" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <LinearLayout
            android:id="@+id/dob"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/rectangle_white"
            android:onClick="dobClicked"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/dateOfBirthHeading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:text="@string/date_of_birth"
                android:textColor="#787878" />

            <TextView
                android:id="@+id/dob2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:paddingTop="15dp"
                android:text="@string/first_name" />
        </LinearLayout>

        <EditText
            android:id="@+id/editDOB"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@drawable/rectangle_grey"
            android:inputType="date"
            android:paddingBottom="15dp"
            android:paddingLeft="10dp"
            android:paddingTop="15dp"
            android:visibility="gone" />

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000" />
    </LinearLayout>

</ScrollView>